# indiseek

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.ralph/: progress.md
docs/: SPEC-dashboard.md  SPEC.md  query-flow.md
docs/diagrams/: agent-loop.excalidraw  code-structure-metadata.excalidraw  data-formats.excalidraw  lancedb-deep-dive-v1.excalidraw  lancedb-deep-dive.excalidraw  pipeline-overview.excalidraw  proposed-fixes.excalidraw  query-flow.excalidraw  query-trace.excalidraw  step1-treesitter.excalidraw  step2-scip.excalidraw  step3-embedding.excalidraw  step4-summarization.excalidraw  step5-lexical.excalidraw  summaries-and-tools.excalidraw  tantivy-index.excalidraw
docs/eval/: vite-css-hmr.md
docs/plans/: agent-loop-tier1.md  agent-loop.md  cache-test-suite.md  issues.md  llm-tuning-knobs.md  manual-runbook.md  master.md  multi-agent-architecture.md  multi-agent-evals.md  query-caching.md  query-history.md  query-ui.md  restore-agent-loop.md  roadmap.md  sprint.md  swappable-llm-providers.md  test-speed.md  todo.md
docs/traces/: 002-report.md  (+7 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: eval-gold-once.sh  eval-gold.sh  gen_analysis_diagrams.py  generate_diagrams.py  generate_scip.sh  index.py  parse_eval_metrics.py  ralph-once.sh  ralph.sh  run_sample.sh
tests/: CLAUDE.md  conftest.py  helpers.py  test_agent.py  test_cache.py  test_classic.py  test_dashboard.py  test_embedding.py  test_lexical.py  test_multi_agent.py  test_parser.py  test_repos.py  test_scip.py  test_summarizer.py  test_tools.py
(+64 files in other folders)
