[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "indiseek"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.25",
    "tree-sitter-typescript",
    "lancedb",
    "tantivy",
    "google-genai",
    "fastapi",
    "uvicorn[standard]",
    "protobuf",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
